# eightbit-kansas-lava

./: .gitignore  README.md  eightbit-kansas-lava.cabal  stack.yaml
image/: FillScreen.asm
image/AllSuiteA/: .gitignore  AllSuiteA.asm  Makefile  main.asm  pet-hexdebug.asm
ise/: PET.tcl  tcl.mustache
ise/ipcore_dir/: ClockMan.xco
ise/src/: PET.ucf  PET.vhdl  ToggleSync.vhdl
lava/EightBit/PET/: Board.hs  Build.hs  Keyboard.hs  Machine.hs  PIA.hs  Utils.hs  VIA.hs  Video.hs
lava/EightBit/PET/VIA/: Interruptor.hs  Port.hs  Shifter.hs  Timer.hs
src/EightBit/PET/: Board.hs  Build.hs  DCM.hs  Keyboard.hs  Machine.hs  PIA.hs  Utils.hs  Video.hs
xaw/: dcm_32_to_40.xaw
