name:                eightbit-kansas-lava
version:             0.0.0.0
synopsis:            Eight-bit home computers implemented in Kansas Lava
-- description:
license:             BSD3
license-file:        LICENSE
copyright:           (C) 2014 Gergő Érdi
author:              Gergő Érdi
maintainer:          Gergő Érdi <gergo@erdi.hu>
category:            Hardware
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      lava
  exposed-modules:
        EightBit.PET.Board
        EightBit.PET.Video
        EightBit.PET.PIA
        EightBit.PET.VIA
        EightBit.PET.Keyboard
  other-modules:
        EightBit.PET.Utils

  build-depends:
        base >=4.7 && < 5,
        kansas-lava >=0.2.4 && < 0.2.5,
        netlist-to-vhdl >=0.3 && <0.4,
        kansas-lava-papilio >= 0.3 && < 0.4,
        mos6502-kansas-lava == 0.0.0.0,
        sized-types >=0.3,
        binary-literal-qq >= 1.0 && < 1.1,
        bytestring
  default-language:    Haskell2010
  other-extensions:    ScopedTypeVariables, RecordWildCards, TypeFamilies, QuasiQuotes
  Ghc-Options:         -Werror
                       -fwarn-unused-imports -fwarn-unused-matches
                       -fwarn-unused-binds -fwarn-missing-signatures


executable eightbit-pet
  hs-source-dirs:      lava
  main-is:             EightBit/PET/Build.hs
  other-modules:
        EightBit.PET.Utils
        EightBit.PET.PIA
        EightBit.PET.Keyboard
        EightBit.PET.Board
        EightBit.PET.Machine
        EightBit.PET.Video
        
  build-depends:
        base >=4.7 && < 5,
        kansas-lava >=0.2.4 && < 0.2.5,
        netlist-to-vhdl >=0.3 && <0.4,
        kansas-lava-papilio >= 0.3 && < 0.4,
        kansas-lava-shake >= 0.2 && < 0.3,
        mos6502-kansas-lava == 0.0.0.0,
        shake,
        sized-types >=0.3,
        bytestring
  default-language:    Haskell2010
  other-extensions:    ScopedTypeVariables, RecordWildCards, FlexibleInstances, TypeFamilies, NoMonomorphismRestriction
  Ghc-Options:         
                       -fwarn-unused-imports -fwarn-unused-matches
                       -fwarn-unused-binds -fwarn-missing-signatures
                       -threaded

source-repository head
  type:     git
  location: git://github.com/gergoerdi/eightbit-kansas-lava
